Added test case